sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:3: error: not found: value s
  s=true
  ^AlgCocktailSort1:4: error: not found: value s
  while(s){
        ^AlgCocktailSort1:8: error: not found: value s
      s=true
      ^AlgCocktailSort1:14: error: not found: value s
      s=true
      ^